[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/goose_walk_1goose_idle2costume2costume3.png" type="Texture" id=1]
[ext_resource path="res://assets/images/goose_walk_2.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Goose arm.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://assets/images/goose_idle (1).png" type="Texture" id=5]
[ext_resource path="res://assets/images/goose_walk_3goose_idle2costume2costume6goose_idle2costume2costume5.png" type="Texture" id=6]
[ext_resource path="res://assets/images/goose_walk_4.png" type="Texture" id=7]
[ext_resource path="res://assets/images/goose_walk_5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.5, 8 )

[sub_resource type="PrismMesh" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 31 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 31.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 180, 0 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.05176e-05, -8 )
scale = Vector2( 0.308081, 0.306094 )
frames = SubResource( 3 )

[node name="Arm joint" type="Node2D" parent="AnimatedSprite"]
position = Vector2( 48, -6 )

[node name="Sprite" type="Sprite" parent="AnimatedSprite/Arm joint"]
position = Vector2( 6.10352e-05, 1.52588e-05 )
scale = Vector2( 0.88128, 0.970265 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -60, 0, 190, 230 )

[node name="Sword" type="KinematicBody2D" parent="AnimatedSprite/Arm joint/Sprite"]
visible = false
position = Vector2( 0.781, 0 )
scale = Vector2( 3.68316, 3.36709 )

[node name="Area2D" type="Area2D" parent="AnimatedSprite/Arm joint/Sprite/Sword"]
position = Vector2( 24, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Arm joint/Sprite/Sword/Area2D"]
position = Vector2( 17.5, -2 )
shape = SubResource( 4 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="AnimatedSprite/Arm joint/Sprite/Sword/Area2D/CollisionShape2D"]
position = Vector2( 3.21905, 0.565127 )
rotation = -1.5708
scale = Vector2( 11.535, 32.0613 )
mesh = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Collision" type="Area2D" parent="."]
position = Vector2( -4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 4, 0 )
shape = SubResource( 2 )

[node name="Healthbar" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -86.0
margin_right = 21.0
margin_bottom = -70.0
color = Color( 0.858824, 0.854902, 0.854902, 1 )

[node name="health" type="ColorRect" parent="Healthbar"]
margin_left = 4.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 13.0
color = Color( 0.52549, 0, 0, 1 )

[node name="Damage cooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="Item cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Item use time" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="Damage cooldown" to="." method="_on_Damage_cooldown_timeout"]
[connection signal="timeout" from="Item cooldown" to="." method="_on_Item_cooldown_timeout"]
[connection signal="timeout" from="Item use time" to="." method="_on_Item_use_time_timeout"]
